test/fail/fail02.lsp
; dieser Test sollte auch fehlschlagen, denn B über A nach C und B nach C sind inkonsistent
(r 'A 'B '(<))
(r 'B 'C '(< =))
(r 'A 'C '(>))
(r_exist 'A '(B C) '(d));  - hier wird der Existenzquantor eingesetzt
(r_exist 'A 'B '(di));  - hier wird der Existenzquantor eingesetzt
